[tool.poetry]
name = "photo-album"
version = "0.1.0"
description = ""
authors = ["kelli-wyngarden <kelli.r.wood@gmail.com>"]
readme = "README.md"
packages = [{include = "photo_album"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "album"
addopts = [
    "--import-mode=importlib",
]
